--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>AdminPro</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="google-signin-client_id"
+      content="503584228784-7gb1f8ppkgcjeheevj87pp9vuru3hgml.apps.googleusercontent.com"
+    />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Favicon icon -->
@@ -38,6 +43,7 @@
     <!-- END Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
     <app-root></app-root>
+    <script src="https://apis.google.com/js/platform.js"></script>
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
